make overflow-y visible to prevent clipping

--- a/src/display/style/main.scss
+++ b/src/display/style/main.scss
@@ -49,6 +49,7 @@ ol {
     justify-content: flex-end;
     height: $crawler_bar_height;
     overflow: hidden;
+    overflow-y: visible;
     padding: 0 10%;
     padding-bottom: 10px;
     width: 100%;
